feat: добавить чтение group releases через API
